--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 # Black and Ruff configuration for consistent, linted code
 [tool.black]
-line-length = 100
+line-length = 120
 
 [tool.ruff]
-line-length = 100
-select = ["E", "F", "W", "I", "N", "UP", "B"] # Common quality and bugbear rules
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "N", "UP", "B"]
 ignore = []
