README.md structure added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "aromavault",
     "Jaccard",
     "neroli",
+    "normalises",
     "oakmoss",
+    "personalised",
     "rapidfuzz",
     "typer"
   ]
