--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
-# Runtime and dev tools
-# typer[all]: CLI framework with autocompletion & prompts
-# rich: pretty tables and styled text in terminal
-# rapidfuzz: optional fuzzy matching for search
-# black: opinionated formatter
-# ruff: fast linter
-typer[all]
-rich
-rapidfuzz
-black
-ruff
-
-pytest # For testing
-pytest-cov # For testing
-ruff
-black
-
-Flask
-gunicorn
+black==25.1.0
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+coverage==7.10.7
+Flask==3.1.2
+gunicorn==23.0.0
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.4.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==8.4.2
+pytest-cov==7.0.0
+RapidFuzz==3.14.1
+rich==14.1.0
+ruff==0.12.12
+shellingham==1.5.4
+typer==0.17.4
+typing_extensions==4.15.0
+Werkzeug==3.1.3
