cli: export pure Click group 'app'; add seed-minimal & add-perf for tests

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ NUL
 __pycache__/
 .db.json
 /db.json
+
+# Local backups & bytecode
+*.backup.*.py
+cli_app.backup.*.py
+storage.backup.*.py
+__pycache__/
+*.pyc
+*.pyo
