Readme updated with screenshots ready for submission

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,46 @@
 {
   "cSpell.words": [
-    "AromaVault","aromavault","CLI","WSGI","dyno","buildpack","Procfile","Procfiles",
-    "gunicorn","Heroku","Jinja2","markdown","pytest","recommender","ruff","typer",
-    "uvicorn","venv","Nocturne","oakmoss","healthz","robots","tonka",
-    "colorama","iniconfig","mdurl","mypy","pathspec","platformdirs","pluggy",
-    "Pygments","shellingham","Werkzeug","favourite"
+    "aromavault",
+    "AromaVault",
+    "beforeend",
+    "buildpack",
+    "cheatsheet",
+    "CLI",
+    "colorama",
+    "Consolas",
+    "dyno",
+    "favourite",
+    "gunicorn",
+    "healthz",
+    "Heroku",
+    "iniconfig",
+    "Jinja2",
+    "markdown",
+    "mdurl",
+    "Menlo",
+    "mypy",
+    "Noctis",
+    "Nocturne",
+    "oakmoss",
+    "pathspec",
+    "platformdirs",
+    "pluggy",
+    "Prereqs",
+    "Procfile",
+    "Procfiles",
+    "promptline",
+    "Pygments",
+    "pytest",
+    "recommender",
+    "robots",
+    "ruff",
+    "shellingham",
+    "tonka",
+    "typer",
+    "uvicorn",
+    "venv",
+    "Werkzeug",
+    "WSGI"
   ],
   "cSpell.ignorePaths": [
     "**/node_modules/**",
